--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
+    "type": "module",
     "db:setup": "tsx scripts/setup-db.ts"
   },
   "dependencies": {
@@ -66,7 +67,8 @@
     "genkit-cli": "^1.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.16.2",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
